--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@onereach/time-interpreter": "^1.0.29",
     "nuxt": "^3.11.2",
+    "pretty-ms": "^9.0.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
