--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.15.2",
     "@onereach/time-interpreter": "^1.0.29",
     "nuxt": "^3.11.2",
     "pretty-ms": "^9.0.0",
